--- a/sass/components/_feed.scss
+++ b/sass/components/_feed.scss
@@ -6,7 +6,7 @@
   position: relative;
 
   @media (--desktop) {
-    height: 50vw;
+    height: calc(100vh - 64px);
     margin-top: 64px;
     display: flex;
     flex-wrap: wrap;
